# email-service

./: .dockerignore  .env.example  .gitignore  .yamllint  CLAUDE.md  CODE_REVIEW.md  DEFECT_REPORT.md  Dockerfile  LICENSE  README.md  __init__.py  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
REQ/: REQ-1.md
api/: __init__.py  main.py  schemas.py
clients/: __init__.py  smtp.py
config/: __init__.py  settings.py
core/: __init__.py  exceptions.py  logger.py
database/: __init__.py  queue.py
deploy/: DEPLOYMENT_GUIDE.md  Dockerfile.cloudrun  deploy-manual.sh  env.production  post-deploy.sh  setup-gcp.sh
models/: __init__.py  context.py  email.py  requests.py  smtp_config.py  stats.py
scripts/: __init__.py  validate_env.py  validate_smtp.py
specs/: CLOUD_RUN_DEPLOYMENT.md
sql/: init.sql
templates/: __init__.py  booking_cancelled.html  booking_created.html  booking_rescheduled.html  otp_verification.html  reminder_1h.html  reminder_24h.html  renderer.py
tests/: conftest.py  test_queue_connection_recovery.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_queue_manager.py  test_smtp_client.py  test_template_renderer.py
worker/: __init__.py  __main__.py  processor.py
